[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "dinov2"
version = "0.0.1"
description = "PyTorch code and models for the DINOv2 self-supervised learning method."
authors = ["FAIR"]
readme = "README.md"
packages = [{include = "dinov2"}]
package-mode = false


[tool.poetry.dependencies]
python = "~3.12"

torch = "^2.4.1"
torchvision = "^0.19.1"
omegaconf = "^2.3.0"
torchmetrics = "^1.4.2"
fvcore = "^0.1.5.post20221221"
iopath = "^0.1.10"
xformers = "^0.0.28.post1"
submitit = "^1.5.2"

# TODO: cuml-cu11 fails to install without an Nvidia GPU
# cuml-cu11 = { version = "*", source = "nvidia" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
black = "^24.8.0"
jupyter = "^1.1.1"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"


[tool.black]
line-length = 80


[tool.pylint.master]
persistent = false
score = false


[tool.pylint.messages_control]
disable = "all"
enable = [
  "miscellaneous",
  "similarities",
]


[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 8


[tool.pylint.reports]
reports = false


[tool.pylint.miscellaneous]
notes = [
  "FIXME",
  "XXX",
  "TODO",
]
